--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,4 +1,4 @@
-name: PostQuantumSolace CI
+name: DoubleRatchetKit CI
 
 on:
   push:
@@ -122,11 +122,3 @@ jobs:
 
       - name: Test
         run: swift test
-
-      - name: Skip Android build (macOS)
-        if: ${{ runner.os == 'macOS' }}
-        run: skip android build
-
-      - name: Skip Android test (macOS)
-        if: ${{ runner.os == 'macOS' }}
-        run: skip android test
