build for android in CI

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -122,3 +122,7 @@ jobs:
 
       - name: Test
         run: swift test
+
+      - name: Skip Android build (macOS)
+        if: ${{ runner.os == 'macOS' }}
+        run: skip android build
